tried to use sdk v2 for some methods